--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -94,6 +94,7 @@ google-dagger-hilt-android = { id = "com.google.dagger.hilt.android", version.re
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kover = { id = "org.jetbrains.kotlinx.kover", version = "0.6.1" }
 ktlint = { id = "org.jlleitschuh.gradle.ktlint", version = "11.3.1" }
+modulegraph = { id = "dev.iurysouza.modulegraph", version = "0.3.0" }
 
 [bundles]
 compose = [
