chore: rename old core module
Rename the old core module to coreold, having this and the folder module named core causes a
conflict for the graph drawing tool.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,7 +60,7 @@ dependencies {
     implementation project(":features:search")
     implementation project(":features:series")
     implementation project(":features:settings")
-    implementation project(":libraries:core")
+    implementation project(':libraries:coreold')
     implementation project(":libraries:database")
     implementation project(":libraries:datasource:activity")
     implementation project(":libraries:datasource:auth")
