--- a/features/series/build.gradle
+++ b/features/series/build.gradle
@@ -37,7 +37,7 @@ dependencies {
     implementation project(":core:compose")
     implementation project(":core:preferences")
     implementation project(":core:resources")
-    implementation project(":libraries:core")
+    implementation project(':libraries:coreold')
     implementation project(":libraries:datasource:series")
 
     implementation platform(libs.androidx.compose.bom)
