--- a/libraries/kitsu/activity/build.gradle
+++ b/libraries/kitsu/activity/build.gradle
@@ -23,7 +23,7 @@ android {
 }
 
 dependencies {
-    implementation project(":libraries:core")
+    implementation project(':libraries:coreold')
     implementation project(':libraries:datasource:activity')
     implementation project(':libraries:kitsu')
 
