--- a/settings.gradle
+++ b/settings.gradle
@@ -24,7 +24,7 @@ include ':app',
     ':features:search',
     ':features:series',
     ':features:settings',
-    ':libraries:core',
+    ':libraries:coreold',
     ':libraries:database',
     ':libraries:datasource:activity',
     ':libraries:datasource:auth',
