--- a/features/settings/build.gradle
+++ b/features/settings/build.gradle
@@ -35,7 +35,7 @@ dependencies {
     implementation project(":core:compose")
     implementation project(":core:preferences")
     implementation project(":core:resources")
-    implementation project(":libraries:core")
+    implementation project(':libraries:coreold')
 
     implementation platform(libs.androidx.compose.bom)
     implementation libs.androidx.appcompat
