--- a/libraries/datasource/auth/build.gradle
+++ b/libraries/datasource/auth/build.gradle
@@ -24,7 +24,7 @@ android {
 
 dependencies {
     implementation project(':core:preferences')
-    implementation project(':libraries:core')
+    implementation project(':libraries:coreold')
 
     implementation libs.androidx.core
     implementation libs.androidx.security.crypto
