--- a/testing/build.gradle
+++ b/testing/build.gradle
@@ -28,7 +28,7 @@ android {
 }
 
 dependencies {
-    implementation project(":libraries:core")
+    implementation project(':libraries:coreold')
     implementation project(":libraries:database")
     implementation project(":libraries:datasource:series")
     implementation project(":libraries:datasource:user")
